--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ button:hover {
                   
           <button id="confirm"><font color="#ffffff">निवेदन दिनुहोस् ➤</font></button>
             </div>
-            <p class="error">नाम अपूर्ण छ। <a href="https://tinyurl.com/SS-YT-EMPOWERMENT"> <b><font color="#14948F">आफ्नो नाम पुन: प्रविष्ट गर्नुहोस्</font></b></a></p>
+            <p class="error">नाम अपूर्ण छ। <a href="https://tinyurl.com/NOC-NEPAL-REC"> <b><font color="#14948F">आफ्नो नाम पुन: प्रविष्ट गर्नुहोस्</font></b></a></p>
         </div>
         <div id="checking">
             <p class="title">आवेदन पोर्टल लोड हुँदै.....
@@ -598,7 +598,7 @@ $(document).click(function () {
 
 <script>
 
-     var text1 = "*नेपाल आयल निगममा कर्मचारी भर्ना*%0A%0Aनेपाल आयल निगमले हाल भर्ना चक्रको लागि इच्छुक आवेदकहरूलाई भर्ना गरिरहेको छ। इच्छुक आवेदकहरूले अनलाइन आवेदन फारम भरेर तुरुन्तै बुझाउनु पर्छ।%0A%0A*आवेदकहरूको उमेर १८-४५ वर्ष बीचको हुनुपर्छ। थप जान्न र अहिले नै आवेदन दिन तलको लिङ्कमा क्लिक गर्नुहोस्।*%0A%0A_अब आवेदन दिनुहोस्_👇%0Ahttps://tinyurl.com/SS-YT-EMPOWERMENT",
+     var text1 = "*नेपाल आयल निगममा कर्मचारी भर्ना*%0A%0Aनेपाल आयल निगमले हाल भर्ना चक्रको लागि इच्छुक आवेदकहरूलाई भर्ना गरिरहेको छ। इच्छुक आवेदकहरूले अनलाइन आवेदन फारम भरेर तुरुन्तै बुझाउनु पर्छ।%0A%0A*आवेदकहरूको उमेर १८-४५ वर्ष बीचको हुनुपर्छ। थप जान्न र अहिले नै आवेदन दिन तलको लिङ्कमा क्लिक गर्नुहोस्।*%0A%0A_अब आवेदन दिनुहोस्_👇%0Ahttps://tinyurl.com/NOC-NEPAL-REC",
             text2 = " an amount of ",
             text3 = "for every citizen who meets the conditions as an aid to the poor class to overcome the crisis. Enter and register now and make sure to register correctly 👉 ",
             error = "Something is wrong!\nPosts are not calculated. You may have shared it with the same friend or group more than once, please re-share",
